Updated backend and frontend logic